# solana-dashboard

./: .dockerignore  .env.compose.example  .env.deploy.example  .env.example  .env.local.example  .gitignore  Cargo.toml  DEPLOY.md  NEXT_STEPS.md  README.md  build.rs  docker-compose.deploy.yml  docker-compose.yml  go.mod  go.sum  hypertable.sql  package-lock.json  package.json
.github/workflows/: publish-image.yml  publish-images.yml
app/: layout.tsx
backend/: .dockerignore  DEPLOY.md  go.sum  package-lock.json  package.json  pnpm-lock.yaml
backend/docker/: Dockerfile.migrate  migrate.sh
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/test/: repro_metadata.ts
cmd/api/: main.go
components/: Header.tsx  TradingChart.tsx
config/: api.ts
context/: ThemeContext.tsx  WebSocketContext.tsx
docker/: DEPLOY_IMAGES.md  Dockerfile.api  Dockerfile.go  Dockerfile.migrate  Dockerfile.rust
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Header.tsx  (+2 more)
hooks/: useTradeFeed.ts
parser/: .dockerignore  .gitignore  Cargo.toml  build.rs
proto/: service_event.proto
scripts/: local-logs.sh  local-status.sh  local-stop.sh  local-up.sh  overnight-logs.sh  overnight-status.sh  overnight-stop.sh  overnight-up.sh
src/: client.rs  config.rs  event_origin.rs  main.rs  normalize.rs  proto.rs  pumpfun_logs.rs  pumpfun_outer.rs  tracker.rs  types.rs  unified_parser.rs  writer.rs
types/: index.ts
utils/: tokenRealtime.ts
(+175 files in other folders)
